crates/ndc-sqlserver/tests/snapshots/query_tests__native_queries__select_artists_below_id.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "AC/DC"
      },
      {
        "Name": "Accept"
      },
      {
        "Name": "Aerosmith"
      },
      {
        "Name": "Alanis Morissette"
      }
    ]
  }
]
